Solve problems on the structe ando alignation

--- a/src/Components/Login/login.css
+++ b/src/Components/Login/login.css
@@ -1,7 +1,11 @@
 .login-body {
   display: flex;
   flex-direction: column;
+  height: 100%;
   align-items: center;
+  width: 100%;
+  justify-content: center;
+  position: fixed;
 }
 
 .login-block {
